--- a/client/src/ui/leaderboarddialog_ui.ui
+++ b/client/src/ui/leaderboarddialog_ui.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LeaderboardDialog</class>
- <widget class="QDialog" name="LeaderboardDialog">
+ <class>LeaderboardDialogUi</class>
+ <widget class="QDialog" name="LeaderboardDialogUi">
   <property name="geometry">
    <rect>
     <x>0</x>
