--- a/client/src/ui/buildworddialog_ui.ui
+++ b/client/src/ui/buildworddialog_ui.ui
@@ -34,7 +34,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="bakcPushButton">
+     <widget class="QPushButton" name="backPushButton">
       <property name="text">
        <string>back</string>
       </property>
