--- a/client/src/ui/mainwindow.ui
+++ b/client/src/ui/mainwindow.ui
@@ -18,58 +18,70 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>20</y>
+      <y>60</y>
       <width>281</width>
       <height>431</height>
      </rect>
     </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::DotLine</enum>
+    </property>
    </widget>
-   <widget class="QPushButton" name="gamePushButton">
+   <widget class="QtMaterialFlatButton" name="gamePushButton">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>90</y>
-      <width>221</width>
-      <height>41</height>
+      <x>410</x>
+      <y>140</y>
+      <width>220</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>enter game</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="leaderboardPushBotton">
+   <widget class="QtMaterialFlatButton" name="leaderboardPushBotton">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>410</x>
       <y>230</y>
-      <width>211</width>
-      <height>41</height>
+      <width>220</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>leaderboard</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
-   <widget class="QPushButton" name="logoutPushBotton">
+   <widget class="QtMaterialFlatButton" name="logoutPushBotton">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>340</y>
-      <width>191</width>
-      <height>41</height>
+      <x>410</x>
+      <y>320</y>
+      <width>220</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>logout</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="buildWordPushButton">
+   <widget class="QtMaterialFlatButton" name="buildWordPushButton">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>70</y>
-      <width>221</width>
-      <height>41</height>
+      <x>410</x>
+      <y>140</y>
+      <width>220</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
@@ -89,6 +101,13 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QtMaterialFlatButton</class>
+   <extends>QPushButton</extends>
+   <header location="global">qtmaterialflatbutton.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
