--- a/client/src/ui/leaderboarddialog_ui.ui
+++ b/client/src/ui/leaderboarddialog_ui.ui
@@ -16,47 +16,65 @@
   <widget class="QTableView" name="leaderboardTableView">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>70</y>
+     <x>100</x>
+     <y>90</y>
      <width>311</width>
      <height>221</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="characterComboBox">
+  <widget class="QtMaterialRaisedButton" name="backPushButton">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>10</y>
-     <width>181</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>WordBuilder</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Challenger</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QPushButton" name="backPushButton">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>350</y>
-     <width>80</width>
-     <height>14</height>
+     <x>100</x>
+     <y>380</y>
+     <width>101</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>back</string>
    </property>
   </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>320</y>
+     <width>309</width>
+     <height>56</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QtMaterialRadioButton" name="challengerRadioButton">
+      <property name="text">
+       <string>challenger</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QtMaterialRadioButton" name="wordRadioButton">
+      <property name="text">
+       <string>word builder</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QtMaterialRadioButton</class>
+   <extends>QRadioButton</extends>
+   <header location="global">qtmaterialradiobutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QtMaterialRaisedButton</class>
+   <extends>QPushButton</extends>
+   <header location="global">qtmaterialraisedbutton.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
