--- a/client/src/ui/gamedialog_ui.ui
+++ b/client/src/ui/gamedialog_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>688</width>
-    <height>666</height>
+    <width>600</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,20 +16,20 @@
   <widget class="QLCDNumber" name="countdownLcdNumber">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>22</y>
+     <x>260</x>
+     <y>110</y>
      <width>151</width>
      <height>41</height>
     </rect>
    </property>
   </widget>
-  <widget class="QProgressBar" name="countdownProgressBar">
+  <widget class="RadiusProgressBar" name="countdownProgressBar">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>10</y>
-     <width>281</width>
-     <height>61</height>
+     <x>200</x>
+     <y>150</y>
+     <width>201</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="value">
@@ -39,20 +39,20 @@
   <widget class="QTextBrowser" name="wordTextBrowser">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>140</y>
-     <width>571</width>
-     <height>111</height>
+     <x>140</x>
+     <y>200</y>
+     <width>331</width>
+     <height>61</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="cardTextBrowser">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>450</y>
-     <width>161</width>
-     <height>141</height>
+     <x>90</x>
+     <y>30</y>
+     <width>421</width>
+     <height>71</height>
     </rect>
    </property>
   </widget>
@@ -60,14 +60,20 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>470</y>
-     <width>186</width>
+     <y>380</y>
+     <width>351</width>
      <height>80</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QtMaterialRaisedButton" name="backPushBotton">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>back</string>
       </property>
@@ -75,6 +81,12 @@
     </item>
     <item>
      <widget class="QtMaterialRaisedButton" name="nextPushButton">
+      <property name="minimumSize">
+       <size>
+        <width>40</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>next</string>
       </property>
@@ -85,14 +97,14 @@
   <widget class="QtMaterialTextField" name="wordLineEdit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>320</y>
+     <x>130</x>
+     <y>280</y>
      <width>351</width>
      <height>71</height>
     </rect>
    </property>
    <property name="text">
-    <string>123123</string>
+    <string/>
    </property>
   </widget>
  </widget>
@@ -106,6 +118,11 @@
    <class>QtMaterialRaisedButton</class>
    <extends>QPushButton</extends>
    <header location="global">qtmaterialraisedbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>RadiusProgressBar</class>
+   <extends>QProgressBar</extends>
+   <header location="global">ui/radiusprogressbar.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
