--- a/client/src/ui/leaderboarddialog_ui.ui
+++ b/client/src/ui/leaderboarddialog_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>572</width>
-    <height>507</height>
+    <width>733</width>
+    <height>576</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,19 +16,25 @@
   <widget class="QTableView" name="leaderboardTableView">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>90</y>
-     <width>311</width>
-     <height>221</height>
+     <x>70</x>
+     <y>70</y>
+     <width>591</width>
+     <height>421</height>
     </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
   </widget>
   <widget class="QtMaterialRaisedButton" name="backPushButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>380</y>
-     <width>101</width>
+     <x>170</x>
+     <y>510</y>
+     <width>391</width>
      <height>41</height>
     </rect>
    </property>
@@ -39,8 +45,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>320</y>
+     <x>200</x>
+     <y>10</y>
      <width>309</width>
      <height>56</height>
     </rect>
