--- a/client/src/ui/mainwindow.ui
+++ b/client/src/ui/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>120</y>
+      <y>100</y>
       <width>231</width>
       <height>221</height>
      </rect>
@@ -43,7 +43,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>70</y>
+      <y>140</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -56,7 +56,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>170</y>
+      <y>210</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -75,7 +75,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>260</y>
+      <y>280</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -88,13 +88,26 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>70</y>
+      <y>140</y>
       <width>191</width>
       <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>build new word</string>
+    </property>
+   </widget>
+   <widget class="QtMaterialRaisedButton" name="searchPushButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>70</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>search</string>
     </property>
    </widget>
   </widget>
