--- a/client/src/ui/registerdialog_ui.ui
+++ b/client/src/ui/registerdialog_ui.ui
@@ -16,42 +16,28 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>100</y>
-     <width>311</width>
+     <x>60</x>
+     <y>120</y>
+     <width>393</width>
      <height>231</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
-       <widget class="QtMaterialRaisedButton" name="backPushBotton">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>back</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QtMaterialRaisedButton" name="registerPushButton">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Register</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+    <item row="1" column="0">
+     <widget class="QtMaterialTextField" name="usernameLineEdit">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+        <horstretch>29</horstretch>
+        <verstretch>29</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>4</width>
+        <height>50</height>
+       </size>
+      </property>
+     </widget>
     </item>
     <item row="2" column="0">
      <widget class="QtMaterialTextField" name="passwordLineEdit">
@@ -72,8 +58,38 @@
       </property>
      </widget>
     </item>
+    <item row="4" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QtMaterialRaisedButton" name="backPushButton">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Back</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QtMaterialRaisedButton" name="registerPushButton">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Register</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
     <item row="3" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QtMaterialRadioButton" name="wordRadioButton">
         <property name="text">
@@ -90,30 +106,14 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <widget class="QtMaterialTextField" name="usernameLineEdit">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>29</horstretch>
-        <verstretch>29</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>4</width>
-        <height>50</height>
-       </size>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QtMaterialTextField</class>
-   <extends>QLineEdit</extends>
-   <header location="global">qtmaterialtextfield.h</header>
+   <class>QtMaterialRadioButton</class>
+   <extends>QRadioButton</extends>
+   <header location="global">qtmaterialradiobutton.h</header>
   </customwidget>
   <customwidget>
    <class>QtMaterialRaisedButton</class>
@@ -121,9 +121,9 @@
    <header location="global">qtmaterialraisedbutton.h</header>
   </customwidget>
   <customwidget>
-   <class>QtMaterialRadioButton</class>
-   <extends>QRadioButton</extends>
-   <header location="global">qtmaterialradiobutton.h</header>
+   <class>QtMaterialTextField</class>
+   <extends>QLineEdit</extends>
+   <header location="global">qtmaterialtextfield.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
