--- a/client/src/ui/buildworddialog_ui.ui
+++ b/client/src/ui/buildworddialog_ui.ui
@@ -19,25 +19,31 @@
   <widget class="QtMaterialTextField" name="newWordLineEdit">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>130</y>
-     <width>211</width>
-     <height>61</height>
+     <x>120</x>
+     <y>150</y>
+     <width>261</width>
+     <height>51</height>
     </rect>
    </property>
   </widget>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>220</y>
-     <width>261</width>
-     <height>80</height>
+     <x>90</x>
+     <y>229</y>
+     <width>321</width>
+     <height>91</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QtMaterialRaisedButton" name="backPushButton">
+      <property name="minimumSize">
+       <size>
+        <width>40</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>back</string>
       </property>
@@ -45,6 +51,12 @@
     </item>
     <item>
      <widget class="QtMaterialRaisedButton" name="confirmPushBotton">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>make new word</string>
       </property>
@@ -55,14 +67,14 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QtMaterialTextField</class>
-   <extends>QLineEdit</extends>
-   <header location="global">qtmaterialtextfield.h</header>
-  </customwidget>
-  <customwidget>
    <class>QtMaterialRaisedButton</class>
    <extends>QPushButton</extends>
    <header location="global">qtmaterialraisedbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QtMaterialTextField</class>
+   <extends>QLineEdit</extends>
+   <header location="global">qtmaterialtextfield.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
