--- a/client/src/ui/leaderboarddialog_ui.ui
+++ b/client/src/ui/leaderboarddialog_ui.ui
@@ -22,6 +22,11 @@
      <height>421</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border: none;background:white;
+QTableCornerButton::section{border: none;background:white;}
+QHeaderView{ border: none; background:white; }</string>
+   </property>
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
