--- a/client/src/ui/searchdialog_ui.ui
+++ b/client/src/ui/searchdialog_ui.ui
@@ -48,6 +48,11 @@
      <height>210</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border: none;background:white;
+QTableCornerButton::section{border: none;background:white;}
+QHeaderView{ border: none; background:white; }</string>
+   </property>
   </widget>
   <widget class="QtMaterialTextField" name="userLineEdit">
    <property name="geometry">
