--- a/client/src/ui/searchdialog_ui.ui
+++ b/client/src/ui/searchdialog_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>400</height>
+    <width>600</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>70</y>
-     <width>281</width>
+     <x>80</x>
+     <y>80</y>
+     <width>261</width>
      <height>41</height>
     </rect>
    </property>
@@ -42,10 +42,10 @@
   <widget class="QTableView" name="userTableView">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>130</y>
-     <width>280</width>
-     <height>210</height>
+     <x>70</x>
+     <y>140</y>
+     <width>461</width>
+     <height>251</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -54,10 +54,10 @@ QTableCornerButton::section{border: none;background:white;}
 QHeaderView{ border: none; background:white; }</string>
    </property>
   </widget>
-  <widget class="QtMaterialTextField" name="userLineEdit">
+  <widget class="QtMaterialTextField" name="searchLineEdit">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>120</x>
      <y>10</y>
      <width>241</width>
      <height>51</height>
@@ -67,8 +67,8 @@ QHeaderView{ border: none; background:white; }</string>
   <widget class="QtMaterialRaisedButton" name="backPushButton">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>340</y>
+     <x>190</x>
+     <y>430</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -80,14 +80,34 @@ QHeaderView{ border: none; background:white; }</string>
   <widget class="QtMaterialRaisedButton" name="searchPushButton">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>380</x>
      <y>20</y>
-     <width>81</width>
+     <width>131</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>Search</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="wordFilterComboBox">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>80</y>
+     <width>149</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="challengerFilterComboBox">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>80</y>
+     <width>149</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
