--- a/client/src/ui/mainwindow.ui
+++ b/client/src/ui/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>616</width>
-    <height>432</height>
+    <height>404</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>100</y>
+      <y>110</y>
       <width>301</width>
       <height>241</height>
      </rect>
@@ -48,7 +48,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>70</y>
+      <y>80</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -61,7 +61,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>210</y>
+      <y>220</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -80,7 +80,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>280</y>
+      <y>290</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -93,7 +93,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>70</y>
+      <y>80</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -106,7 +106,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>140</y>
+      <y>150</y>
       <width>191</width>
       <height>40</height>
      </rect>
@@ -119,7 +119,7 @@ QHeaderView{ border: none; background:white; }</string>
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>50</y>
+      <y>60</y>
       <width>291</width>
       <height>41</height>
      </rect>
@@ -135,7 +135,7 @@ QHeaderView{ border: none; background:white; }</string>
      <item>
       <widget class="QtMaterialRadioButton" name="doubleModeRadioButton">
        <property name="text">
-        <string>double player mode</string>
+        <string>double mode</string>
        </property>
       </widget>
      </item>
@@ -156,14 +156,14 @@ QHeaderView{ border: none; background:white; }</string>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QtMaterialRadioButton</class>
-   <extends>QRadioButton</extends>
-   <header location="global">qtmaterialradiobutton.h</header>
-  </customwidget>
-  <customwidget>
    <class>QtMaterialRaisedButton</class>
    <extends>QPushButton</extends>
    <header location="global">qtmaterialraisedbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QtMaterialRadioButton</class>
+   <extends>QRadioButton</extends>
+   <header location="global">qtmaterialradiobutton.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
